[package]
name = "ids_sql"
version = "0.1.0"
authors = ["Pierre-François Gimenez <pierre-francois.gimenez@centralesupelec.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.16"
regex = "1.5.5"
log = "0.4.16"
env_logger = "0.9.0"
